# psnSELF

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
psnself/: auth.py  cli.py  db.py  db_friends.py  db_gamestats.py  log.py  models.py  schema.sql  sync.py
psnself/sync/: __init__.py  extractor.py  friends_sync.py  trophy_sync.py
psnself/web/: __main__.py  app.py  scheduler.py  template.py  utils.py
psnself/web/routes/: auth.py  dashboard.py  friends.py  games.py
psnself/web/services/: friend_service.py  game_service.py  stats_service.py
psnself/web/templates/: auth.html  base.html  friend_compare.html  friends.html  game_detail.html  index.html
psnself/web/templates/partials/: calendar.html  calendar_day_detail.html  day_detail.html
tests/: conftest.py  test_db.py  test_db_friends.py  test_extractor.py  test_models.py  test_routes.py  test_schema.py  test_services.py  test_utils.py
