[project]
name = "psnself"
version = "0.1.0"
readme = "README.md"
description = "PSN Trophy Tracker — self-hosted web dashboard"
authors = [
    {name = "TripShuti"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "psnawp>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
web = [
    "fastapi[standard]>=0.100",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.5",
    "jinja2>=3.0",
]

[project.scripts]
psnself = "psnself.cli:main"

[tool.setuptools.packages.find]
include = ["psnself*"]

[project.urls]
Homepage = "https://github.com/TripShuti/psnself"
Repository = "https://github.com/TripShuti/psnself"
